<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.master.fragments.AutoFragment"
    android:background="@drawable/bg_gradient" >
    
    <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
    <!--                  UPDATE RANKINGS BUTTON                            -->
    <Button
        android:id="@+id/button_updateRank_auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_update_ranking" 
        android:onClick="updateRanking2"/>
    

 	
    <!--                          TEAM RANKINGS TABLE                      -->
        
   	<TextView
        android:gravity="center"
        android:text="@string/ranking_title"
        android:textColor="@color/text_main"
        android:textSize="20sp" 
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:padding="5dp" 
        android:layout_margin="5dp"/>
   	
	<TableLayout 
	    android:id = "@+id/rankings_tl_auto"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:stretchColumns="1">
	    
	    <TableRow 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center">
	        
	        <TextView 
		        android:gravity="center"
		        android:text="@string/team_num"
		        android:textColor="@color/text_main"
		        android:textSize="20sp" 
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:padding="5dp" 
		        android:layout_margin="5dp"
	            />
	        
	        <TextView 
		        android:gravity="center"
		        android:text="@string/team_rating"
		        android:textColor="@color/text_main"
		        android:textSize="20sp" 
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:padding="5dp" 
		        android:layout_margin="5dp"
	            />
	    </TableRow>
    </TableLayout>
	</LinearLayout>

</ScrollView>