<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.master.fragments.DataFragment"
    android:background="@drawable/bg_gradient" >

	<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
	android:orientation="vertical">
	    <Button
	        android:id="@+id/button_updateData"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="20dp"
	        android:text="@string/text_updateData" 
	        android:onClick="updateData"/>
	    <TextView
	        android:id="@+id/tv_data"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="left"
	        android:text="@string/long_string"
	        android:textColor="@color/text_main" />
	    <Button
	        android:id="@+id/button_clearData"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="20dp"
	        android:text="@string/text_clearData" 
	        android:onClick="clearDB"/>
	</LinearLayout>
	
</ScrollView>
