<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.master.fragments.DownloadFragment"
    android:background="@drawable/bg_gradient">

    <TextView
        android:id="@+id/tv_download"
        android:gravity="left"
        android:layout_width="match_parent"
        android:textColor="@color/text_main"
        android:layout_height="wrap_content"/>
    
    
    <Button
        android:id="@+id/button_downloadXMLAuto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:text="@string/text_downloadXMLAuto" 
        android:onClick="downloadXMLAuto"/>
    <Button
        android:id="@+id/button_downloadXMLTele"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:text="@string/text_downloadXMLTele" 
        android:onClick="downloadXMLTele"/>
    
    <Button
        android:id="@+id/button_downloadTXT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:text="@string/text_downloadTXT" 
        android:onClick="downloadText"/>
    
    <TextView
        android:id="@+id/tv_errorLog"
        android:gravity="left"
        android:layout_width="match_parent"
        android:textColor="@color/text_main"
        android:layout_height="wrap_content"/>

</LinearLayout>
