<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.master.fragments.ScannerFragment"
    android:background="@drawable/bg_gradient" >

    <Button
        android:id="@+id/button_scan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_scan" 
        android:onClick="scan"/>

	   	
   	<!-- TEMPORARY STORAGE VIEWS -->
   	<TextView
        android:id="@+id/tv_tableTitle"
        android:gravity="center"
        android:text="@string/tableTitle"
        android:textColor="@color/text_main"
        android:textSize="15sp" 
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
	<TableLayout 
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content">
	    <TableRow 
	        android:layout_height="50dp"
			android:gravity="center">
	
		   	<TextView
		        android:id="@+id/tv_team1"
		        android:gravity="center"
		        android:text="@string/test_team_num"
		        android:textColor="@color/text_main"
		        android:textSize="20sp" 
		        android:layout_height="60dp"
		        android:layout_width="60dp"
		        android:padding="5dp" 
		        android:layout_margin="5dp"
    			android:background="@color/temp_storage_box"/>
		    <TextView
		        android:id="@+id/tv_team2"
		        android:gravity="center"
		        android:text="@string/test_team_num"
		        android:textColor="@color/text_main"
		        android:textSize="20sp" 
		        android:layout_height="60dp"
		        android:layout_width="60dp"
		        android:padding="5dp" 
		        android:layout_margin="5dp"
    			android:background="@color/temp_storage_box"/>
		    <TextView
		        android:id="@+id/tv_team3"
		        android:gravity="center"
		        android:text="@string/test_team_num"
		        android:textColor="@color/text_main"
		        android:textSize="20sp" 
		        android:layout_height="60dp"
		        android:layout_width="60dp"
		        android:padding="5dp" 
		        android:layout_margin="5dp"
    			android:background="@color/temp_storage_box"/>
	    </TableRow>
	    
	    <TableRow 
	        android:layout_height="50dp"
			android:gravity="center">
		   	<TextView
		        android:id="@+id/tv_team4"
		        android:gravity="center"
		        android:text="@string/test_team_num"
		        android:textColor="@color/text_main"
		        android:textSize="20sp" 
		        android:layout_height="60dp"
		        android:layout_width="60dp"
		        android:padding="5dp" 
		        android:layout_margin="5dp"
    			android:background="@color/temp_storage_box"/>
		    <TextView
		        android:id="@+id/tv_team5"
		        android:gravity="center"
		        android:text="@string/test_team_num"
		        android:textColor="@color/text_main"
		        android:textSize="20sp" 
		        android:layout_height="60dp"
		        android:layout_width="60dp"
		        android:padding="5dp" 
		        android:layout_margin="5dp"
    			android:background="@color/temp_storage_box"/>
		    <TextView
		        android:id="@+id/tv_team6"
		        android:gravity="center"
		        android:text="@string/test_team_num"
		        android:textColor="@color/text_main"
		        android:textSize="20sp" 
		        android:layout_height="60dp"
		        android:layout_width="60dp"
		        android:padding="5dp" 
		        android:layout_margin="5dp"
    			android:background="@color/temp_storage_box"/>
	    </TableRow>
    </TableLayout>
    
    <Button
        android:id="@+id/button_addData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:text="@string/text_addData" 
        android:onClick="addData"/>
    
   	<!-- TEMPORARY STORAGE VIEWS END -->

</LinearLayout>
